Sidenav links have pointer cursor

--- a/client/navbar/navbar.less
+++ b/client/navbar/navbar.less
@@ -17,6 +17,9 @@
 .side-nav {
   background-color: @woofiBlue;
 }
+#slide-out > li {
+  cursor: pointer;
+}
 
 /*  Padding for primary content   */
 header, main, footer {
