--- a/client/global.less
+++ b/client/global.less
@@ -1,6 +1,11 @@
 @import "colours";
 @import "constants";
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 .hover-darken:hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
