--- a/client/global.less
+++ b/client/global.less
@@ -5,6 +5,10 @@
   display: flex;
   flex-direction: column;
 }
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
 
 .hover-darken:hover {
   background-color: rgba(0, 0, 0, 0.1);
