Dropdowns now render over other form elements

--- a/client/global.less
+++ b/client/global.less
@@ -13,3 +13,11 @@
 .hover-darken:hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
+
+/*  Forms & Inputs  */
+.input-field label {
+  left: 0;
+}
+.dropdown-content {
+  z-index: 2;
+}
