Set tab colouring to brand colours

--- a/client/global.less
+++ b/client/global.less
@@ -21,3 +21,14 @@
 .dropdown-content {
   z-index: 2;
 }
+
+/*  Tabs    */
+.tab a {
+  color: @woofiBlue !important;
+}
+.tab a:hover {
+  color: @darkBlue !important;
+}
+.indicator {
+  background-color: @woofiBlue !important;
+}
