All forms get 20px padding

--- a/client/global.less
+++ b/client/global.less
@@ -9,12 +9,18 @@
   display: flex;
   flex-direction: row;
 }
+.container .row {
+  margin: 0;
+}
 
 .hover-darken:hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
 /*  Forms & Inputs  */
+form {
+  padding: 20px;
+}
 .input-field label {
   left: 0;
 }
