--- a/client/global.less
+++ b/client/global.less
@@ -20,6 +20,9 @@
 /*  Toast   */
 .toast {
   cursor: pointer;
+  height: auto;
+  line-height: 1.5em;
+  padding: 10px;
 }
 
 /*  Forms & Inputs  */
