Added z-depths to pet tab interface

--- a/client/global.less
+++ b/client/global.less
@@ -48,6 +48,10 @@ form {
 }
 
 /*  Tabs    */
+.tabs-header {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
 .tab a {
   color: @woofiBlue !important;
 }
