Updated welcome content and instructions on menu use.

--- a/client/global.less
+++ b/client/global.less
@@ -1,6 +1,11 @@
 @import "colours";
 @import "constants";
 
+.small-nav-menu {
+  background-color: @woofiBlue;
+  color: #fff;
+}
+
 .flex-column {
   display: flex;
   flex-direction: column;
