--- a/client/global.less
+++ b/client/global.less
@@ -47,10 +47,39 @@ form {
   background-color: @darkBlue !important;
 }
 .waves-effect.waves-woofi .waves-ripple {
- /* The alpha value allows the text and background color
- of the button to still show through. */
   background-color: rgba(51, 87, 128, 0.65);
 }
+/* label color */
+/*.input-field label {
+  color: #000;
+}*/
+/* label focus color */
+.input-field input:focus + label,
+.input-field textarea:focus + label, {
+  color: @darkBlue !important;
+}
+/* label underline focus color */
+.input-field input:focus,
+.input-field textarea:focus {
+  border-bottom: 1px solid @darkBlue !important;
+  box-shadow: 0 1px 0 0 @darkBlue !important;
+}
+/* valid color */
+.input-field input.valid,
+.input-field textarea.valid {
+ border-bottom: 1px solid @woofiBlue !important;
+ box-shadow: 0 1px 0 0 @woofiBlue !important;
+}
+/* invalid color */
+/*.input-field input[type=text].invalid {
+ border-bottom: 1px solid #000;
+ box-shadow: 0 1px 0 0 #000;
+}*/
+/* icon prefix focus color */
+.input-field .prefix.active {
+ color: @woofiBlue !important;
+}
+
 
 /*  Tabs    */
 .tabs-header {
