--- a/client/global.less
+++ b/client/global.less
@@ -29,6 +29,12 @@
   line-height: 1.5em;
   padding: 10px;
 }
+@media only screen and (min-width: 993px) {
+  #toast-container {
+    bottom: 10% !important;
+    top: inherit;
+  }
+}
 
 /*  Forms & Inputs  */
 form {
