Implemented reactive pet mass feature, closes #26

--- a/client/global.less
+++ b/client/global.less
@@ -43,6 +43,13 @@ form {
 .input-field label {
   left: 0;
 }
+input[type=range] + .thumb {
+  background-color: @woofiBlue;
+}
+.range-labels {
+  align-content: space-between;
+  justify-content: space-between;
+}
 .dropdown-content {
   z-index: 2;
 }
