--- a/client/global.less
+++ b/client/global.less
@@ -108,3 +108,15 @@ input[type=range] + .thumb {
 .indicator {
   background-color: @woofiBlue !important;
 }
+
+
+/*    Modals & Dialogs    */
+.modal-footer {
+  display: flex;
+  flex-direction: row;
+  align-content: flex-end;
+  justify-content: flex-end;
+}
+.modal-footer > button {
+  margin: auto 5px !important;
+}
