Pet gender is implemented in Add Pet interface

--- a/client/global.less
+++ b/client/global.less
@@ -43,6 +43,9 @@ form {
 .input-field label {
   left: 0;
 }
+.range-field {
+  margin: 0;
+}
 input[type=range] + .thumb {
   background-color: @woofiBlue;
 }
