Primary container is 100% width on mobile

--- a/client/global.less
+++ b/client/global.less
@@ -17,6 +17,13 @@
 .container .row {
   margin: 0 auto;
 }
+@media only screen and (max-width: 662px) {
+  main > .container {
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+  }
+}
 
 .hover-darken:hover {
   background-color: rgba(0, 0, 0, 0.1);
