Drag target is now always behind sideNav and never on top

--- a/client/navbar/navbar.less
+++ b/client/navbar/navbar.less
@@ -53,10 +53,14 @@
   color: #fff !important;
   text-transform: uppercase;
 }
+#sidenav-overlay {
+  z-index: 996;
+}
 .drag-target {
   top: 56px;
   height: calc(~"100% - 56px");
   min-width: 40px;
+  z-index: 997;
 }
 @media only screen and (min-width: 663px) {
   .drag-taret {
