--- a/client/templates/controls/controls.html
+++ b/client/templates/controls/controls.html
@@ -6,8 +6,7 @@
     <ul>
       <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
       <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+      <li><a class="btn-floating green"><i class="material-icons">wifi_tethering</i></a></li>
     </ul>
   </div>
 </template>
