--- a/client/templates/side-nav/internal-side-nav/internal-side-nav.html
+++ b/client/templates/side-nav/internal-side-nav/internal-side-nav.html
@@ -1,10 +1,19 @@
 <template name="internalSideNav">
-  <nav>
+  <nav class="teal">
     <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="mdi-navigation-menu"></i></a>
-    <ul id="slide-out" class="side-nav">
-      <li>
-        {{> atNavButton }}
-      </li>
-    </ul>
+    <div id="slide-out" class="side-nav">
+      <div>
+        <ul>
+          {{#each feeders}}
+            <li>
+              <a href="/feeder/{{feeder_id}}">{{name}}</a>
+            </li>
+          {{/each}}
+        </ul>
+      </div>
+      <div>
+        <a data-sign-out class="waves-effect waves-light btn blue">Sign Out</a>
+      </div>
+    </div>
   </nav>
 </template>
