--- a/client/layouts/mainLayout.html
+++ b/client/layouts/mainLayout.html
@@ -1,5 +1,5 @@
 <template name="mainLayout">
-  <div class="content">
+  <div class="content full-height">
     {{> Template.dynamic template=nav}}
     {{> Template.dynamic template=main}}
   </div>
