--- a/client/templates/side-nav/internal-side-nav/internal-side-nav.html
+++ b/client/templates/side-nav/internal-side-nav/internal-side-nav.html
@@ -1,7 +1,7 @@
 <template name="internalSideNav">
   <nav class="teal">
     <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="mdi-navigation-menu"></i></a>
-    <div id="slide-out" class="side-nav">
+    <div id="slide-out" class="side-nav flex flex-column flex-between">
       <div>
         <ul>
           {{#each feeders}}
