--- a/client/templates/side-nav/side-nav.less
+++ b/client/templates/side-nav/side-nav.less
@@ -1,6 +1,10 @@
 .side-nav ul li {
   color: #333;
 }
+.side-nav ul li.selected {
+  background-color: #eee;
+  font-weight: bold;
+}
 .side-nav a[data-sign-out] {
   color: #fff;
   border-bottom-left-radius: 0;
