Implemented New Feeder dialog triggered by fixed Material control button (big blue +)

--- a/client/templates/controls/controls.html
+++ b/client/templates/controls/controls.html
@@ -1,16 +1,15 @@
 <template name="controls">
-  <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-    <a class="btn-floating btn-large blue">
-      <i class="large material-icons">add</i>
-    </a>
-    <ul>
-      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-      <li><a class="btn-floating green"><i class="material-icons">wifi_tethering</i></a></li>
-    </ul>
-  </div>
 </template>
 
 <template name="homeControls">
-
+  <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+    <a data-add-new-feeder class="btn-floating btn-large blue">
+      <i class="large material-icons">add</i>
+    </a>
+    <ul>
+      <!--<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>-->
+      <li><a class="btn-floating green"><i class="material-icons">wifi_tethering</i></a></li>
+    </ul>
+  </div>
 </template>
