--- a/client/templates/side-nav/side-nav.less
+++ b/client/templates/side-nav/side-nav.less
@@ -7,8 +7,7 @@
 }
 .side-nav a[data-sign-out] {
   color: #fff;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
+  border-radius: 0;
 }
 
 #slide-out {
