--- a/client/templates/side-nav/internal-side-nav/internal-side-nav.html
+++ b/client/templates/side-nav/internal-side-nav/internal-side-nav.html
@@ -6,7 +6,14 @@
       <div>
         <ul>
           <li class="{{#if routeIs 'Home'}}selected{{/if}}">
-            <a href="/home"><i class="material-icons">home</i>Home</a>
+            <a href="/home">
+              <div class="valign-wrapper flex flex-row">
+                <i class="material-icons">home</i>
+                <div>
+                  Home
+                </div>
+              </div>
+            </a>
           </li>
           {{#each feeders}}
             <li class="{{#if feederIsSelected feeder_id}}selected{{/if}}">
