--- a/client/layouts/mainLayout.html
+++ b/client/layouts/mainLayout.html
@@ -1,6 +1,8 @@
 <template name="mainLayout">
   <div class="content full-height">
     {{> Template.dynamic template=nav}}
-    {{> Template.dynamic template=main}}
+    <div class="container">
+      {{> Template.dynamic template=main}}
+    </div>
   </div>
 </template>
