--- a/client/templates/home/home-dialogs.html
+++ b/client/templates/home/home-dialogs.html
@@ -2,11 +2,13 @@
   <div class="anti-modal-box">
     <div class="anti-modal-body">
       <div class="anti-modal-title">Create New Feeder</div>
-      <div class=""></div>
-      <div class="anti-modal-footer">
-        <button id="cancel" type="button" class="waves-effect waves-light btn grey">Cancel</button>
-        <button id="create-feeder" type="button" class="waves-effect waves-light btn green">Add</button>
-      </div>
+      <form id="new-feeder">
+        <input id="new-feeder-sn" type="text" placeholder="Serial Number"/>
+        <div class="anti-modal-footer">
+          <button id="cancel" type="button" class="waves-effect waves-light btn grey">Cancel</button>
+          <button id="create-feeder" type="button" class="waves-effect waves-light btn green">Add</button>
+        </div>
+      </form>
     </div>
   </div>
 </template>
