--- a/client/templates/controls/controls.html
+++ b/client/templates/controls/controls.html
@@ -9,7 +9,11 @@
     <ul>
       <!--<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
       <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>-->
-      <li><a class="btn-floating green"><i class="material-icons">wifi_tethering</i></a></li>
+      <li>
+        <a data-wifi-setup class="btn-floating green">
+          <i class="material-icons">wifi_tethering</i>
+        </a>
+      </li>
     </ul>
   </div>
 </template>
