Applied Material styles to WiFi Setup wizard.

--- a/client/main.less
+++ b/client/main.less
@@ -21,3 +21,20 @@ body,
   align-content: center;
   justify-content: center;
 }
+
+/*  AntiModal Overrides */
+.anti-modal-overlay {
+  background-color: rgba(0,0,0,0.15);
+}
+.anti-modal-title {
+  font-size: 20px;
+}
+.anti-modal-overlay .anti-modal-box {
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.anti-modal-footer {
+  background: transparent;
+}
