--- a/client/main.less
+++ b/client/main.less
@@ -38,3 +38,12 @@ body,
 .anti-modal-footer {
   background: transparent;
 }
+
+
+/*  Tooltips  */
+.tooltip.show {
+  background-color: rgba(0,0,0,0.55);
+  color: #fff;
+  padding: 5px 10px 5px 10px;
+  border-radius: 5px;
+}
