--- a/client/main.less
+++ b/client/main.less
@@ -5,7 +5,7 @@ body,
 }
 
 .flex {
-  display: flex;
+  display: flex !important;
 }
 .flex-row {
   flex-direction: row;
@@ -21,6 +21,9 @@ body,
   align-content: center;
   justify-content: center;
 }
+.flex-middle {
+  align-items: center;
+}
 
 /*  AntiModal Overrides */
 .anti-modal-overlay {
@@ -29,6 +32,9 @@ body,
 .anti-modal-title {
   font-size: 20px;
   padding: 0;
+}
+.anti-modal-body {
+  background-color: #fff;
 }
 .anti-modal-overlay .anti-modal-box {
   border: none;
@@ -47,4 +53,5 @@ body,
   color: #fff;
   padding: 5px 10px 5px 10px;
   border-radius: 5px;
+  z-index: 1001;
 }
