--- a/client/templates/controls/controls.html
+++ b/client/templates/controls/controls.html
@@ -17,3 +17,23 @@
     </ul>
   </div>
 </template>
+
+<template name="feederConsoleControls">
+  <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+    <a data-add-new-feeder class="btn-floating btn-large blue" data-tooltip="Add New Feeder" data-tooltip-direction="w">
+      <i class="large material-icons">add</i>
+    </a>
+    <ul>
+      <li>
+        <a data-delete-feeder class="btn-floating red" data-tooltip="Delete this Feeder" data-tooltip-direction="w">
+          <i class="material-icons">delete</i>
+        </a>
+      </li>
+      <li>
+        <a data-wifi-setup class="btn-floating green" data-tooltip="WiFi Setup Tool" data-tooltip-direction="w">
+          <i class="material-icons">wifi_tethering</i>
+        </a>
+      </li>
+    </ul>
+  </div>
+</template>
