Abstracted Controls to mainLayout, implemented globally available event callbacks.

--- a/client/templates/controls/controls.html
+++ b/client/templates/controls/controls.html
@@ -1,4 +1,10 @@
 <template name="controls">
+  {{#if routeIs 'Home'}}
+    {{> homeControls }}
+  {{/if}}
+  {{#if routeIs 'Feeder Console'}}
+    {{> feederConsoleControls }}
+  {{/if}}
 </template>
 
 <template name="homeControls">
