--- a/client/layouts/mainLayout.html
+++ b/client/layouts/mainLayout.html
@@ -3,6 +3,8 @@
     {{> Template.dynamic template=nav}}
     <div class="container">
       {{> Template.dynamic template=main}}
+      {{> controls }}
+      {{> tooltips }}
     </div>
   </div>
 </template>
