--- a/client/main.less
+++ b/client/main.less
@@ -29,21 +29,36 @@ body,
 .anti-modal-overlay {
   background-color: rgba(0,0,0,0.15);
 }
+.anti-modal-overlay .anti-modal-box {
+  max-width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+@media screen and (max-width: 600px) {
+  .anti-modal-overlay .anti-modal-box {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+  .anti-modal-footer {
+    position: absolute;
+    bottom: 5px;
+    right: 20px;
+  }
+}
 .anti-modal-title {
   font-size: 20px;
   padding: 0;
 }
 .anti-modal-body {
   background-color: #fff;
-}
-.anti-modal-overlay .anti-modal-box {
-  border: none;
-  outline: none;
-  border-radius: 5px;
-  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  height: 100%;
 }
 .anti-modal-footer {
   background: transparent;
+  padding: 0;
 }
 
 
