--- a/client/main.less
+++ b/client/main.less
@@ -3,7 +3,12 @@ body,
 .full-height {
   height: 100%;
 }
+#container {
+  padding-top: 20px;
+}
 
+/*  Flex Classes  */
+/*  ======================================================================= */
 .flex {
   display: flex !important;
 }
@@ -26,6 +31,7 @@ body,
 }
 
 /*  AntiModal Overrides */
+/*  ======================================================================= */
 .anti-modal-overlay {
   background-color: rgba(0,0,0,0.15);
 }
@@ -63,10 +69,19 @@ body,
 
 
 /*  Tooltips  */
+/*  ======================================================================= */
 .tooltip.show {
   background-color: rgba(0,0,0,0.55);
   color: #fff;
   padding: 5px 10px 5px 10px;
   border-radius: 5px;
   z-index: 1001;
+}
+
+/*  User Accounts */
+/*  ======================================================================= */
+.at-title .header {
+  font-size: 20px;
+  margin: 0;
+  padding: 1.46rem 0 1.168rem 0;
 }
