--- a/client/templates/side-nav/side-nav.less
+++ b/client/templates/side-nav/side-nav.less
@@ -5,10 +5,7 @@
   background-color: #eee;
   font-weight: bold;
 }
-.side-nav a[data-sign-out] {
-  color: #fff;
+.side-nav a[data-sign-out],
+.side-nav a[data-sign-in] {
   border-radius: 0;
-}
-
-#slide-out {
 }
