--- a/client/templates/side-nav/external-side-nav/external-side-nav.html
+++ b/client/templates/side-nav/external-side-nav/external-side-nav.html
@@ -1,35 +1,36 @@
 <template name="externalSideNav">
   <div class="navbar-fixed">
     <nav class="teal">
-      <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="mdi-navigation-menu"></i></a>
-      <a href="#" class="brand-logo">{{routeContext}}</a>
-      <div id="slide-out" class="side-nav flex flex-column flex-between z-depth-2">
-        <div>
-          <ul>
-            <li class="{{#if routeIs 'Home'}}selected{{/if}}">
-              <a href="/" class="flex flex-row flex-between flex-middle">
-                <div>
-                  Home
-                </div>
-                <i class="material-icons">home</i>
-              </a>
-            </li>
-            {{#each feeders}}
-              <li class="{{#if feederIsSelected sn}}selected{{/if}}">
-                <a href="/feeder/{{sn}}" class="flex flex-row flex-between flex-middle">
-                  <div>{{name}}</div>
-                  {{#if online}}
-                    <i class="material-icons grey-text text-darken-1" data-tooltip="Feeder is Online" data-tooltip-direction="s">signal_wifi_4_bar</i>
-                  {{else}}
-                    <i class="material-icons grey-text text-lighten-1" data-tooltip="Feeder is Offline" data-tooltip-direction="s">signal_wifi_off</i>
-                  {{/if}}
+      <div class="nav-wrapper">
+        <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+        <a href="#" class="brand-logo">{{routeContext}}</a>
+        <div id="turnkey-button" class="full-height valign-wrapper">
+          <a data-sign-in class="waves-effect waves-light btn teal darken-2 white-text z-depth-2">Sign In</a>
+        </div>
+        <div id="slide-out" class="side-nav fixed flex flex-column flex-between teal">
+          <div>
+            <ul>
+              <li class="teal {{#if routeIs 'Welcome'}}darken-2{{/if}}">
+                <a href="/" class="flex flex-row flex-between flex-middle white-text">
+                  <div>
+                    Pro-Portion Pet Feeder
+                  </div>
                 </a>
               </li>
-            {{/each}}
-          </ul>
-        </div>
-        <div>
-          <a data-sign-in class="waves-effect waves-light btn blue white-text">Sign In</a>
+              {{#each feeders}}
+                <li class="{{#if feederIsSelected sn}}selected{{/if}}">
+                  <a href="/feeder/{{sn}}" class="flex flex-row flex-between flex-middle">
+                    <div>{{name}}</div>
+                    {{#if online}}
+                      <i class="material-icons grey-text text-darken-1" data-tooltip="Feeder is Online" data-tooltip-direction="s">signal_wifi_4_bar</i>
+                    {{else}}
+                      <i class="material-icons grey-text text-lighten-1" data-tooltip="Feeder is Offline" data-tooltip-direction="s">signal_wifi_off</i>
+                    {{/if}}
+                  </a>
+                </li>
+              {{/each}}
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
