--- a/client/templates/side-nav/side-nav.less
+++ b/client/templates/side-nav/side-nav.less
@@ -1,11 +1,16 @@
 .side-nav ul li {
-  color: #333;
+  transition: box-shadow 0.2s ease-in-out;
 }
-.side-nav ul li.selected {
-  background-color: #eee;
-  font-weight: bold;
+.side-nav ul li:hover {
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .side-nav a[data-sign-out],
 .side-nav a[data-sign-in] {
   border-radius: 0;
+}
+
+#turnkey-button {
+  padding-right: 20px;
+  position: absolute;
+  right: 0;
 }
