Created custom sign in/sign out templates & routes.

--- a/client/main.less
+++ b/client/main.less
@@ -114,6 +114,9 @@ nav .brand-logo {
   top: 15px;
   right: 10px;
 }
+.at-error.card-panel {
+  color: #fff;
+}
 
 /*  Inputs */
 /*  ======================================================================= */
