--- a/client/templates/welcome/welcome.html
+++ b/client/templates/welcome/welcome.html
@@ -21,4 +21,16 @@
       </p>
     </div>
   </div>
+  <div class="parallax-container">
+    <div class="parallax"><img src="imgs/wireless-dog-tracker.jpg"></div>
+  </div>
+  <div class="section white z-depth-2">
+    <div class="row container">
+      <h2 class="header teal-text">Get Started</h2>
+      <p class="grey-text text-darken-3 lighten-3">
+        To begin using the Pro-Portion Feeder app, just sign up using the form below!
+      </p>
+      {{> atForm state='signUp'}}
+    </div>
+  </div>
 </template>
