Added device count & first time set up instructions to `/home` (#42)

--- a/client/main.less
+++ b/client/main.less
@@ -71,6 +71,10 @@ nav .brand-logo {
     width: 100%;
     height: 100%;
     margin: 0;
+    border-radius: 0;
+  }
+  .anti-modal-body {
+    border-radius: 0;
   }
   .anti-modal-footer {
     position: absolute;
@@ -85,10 +89,12 @@ nav .brand-logo {
 .anti-modal-body {
   background-color: #fff;
   height: 100%;
+  border-radius: 5px;
 }
 .anti-modal-footer {
   background: transparent;
   padding: 0;
+  margin-top: 10px;
 }
 
 
@@ -101,6 +107,14 @@ nav .brand-logo {
   border-radius: 5px;
   z-index: 1001;
 }
+
+
+/*  Toast   */
+/*  ======================================================================= */
+#toast-container {
+  z-index: 65537;
+}
+
 
 /*  User Accounts */
 /*  ======================================================================= */
