Input labels do not block clicks.  Created profile edit dialog (#44)

--- a/client/main.less
+++ b/client/main.less
@@ -136,4 +136,5 @@ nav .brand-logo {
 /*  ======================================================================= */
 .input-field label {
   left: 0;
+  pointer-events: none;
 }
