--- a/client/templates/editProfile/edit-profile.html
+++ b/client/templates/editProfile/edit-profile.html
@@ -10,7 +10,7 @@
         </div>
         <div class="anti-modal-footer">
           <button id="cancel" type="button" class="waves-effect waves-light btn grey">Cancel</button>
-          <button id="save-profile" type="submit" class="waves-effect waves-light btn green">Add</button>
+          <button id="save-profile" type="submit" class="waves-effect waves-light btn green">Save</button>
         </div>
       </form>
     </div>
