Right-aligned turnkey button dropdown (Materialize hasn't implemented this yet)

--- a/client/templates/side-nav/internal-side-nav/internal-side-nav.html
+++ b/client/templates/side-nav/internal-side-nav/internal-side-nav.html
@@ -7,7 +7,7 @@
         <div id="turnkey-button" class="full-height valign-wrapper">
           <a data-activates='turnkey-dropdown' class="dropdown-button btn teal darken-2 white-text z-depth-2">
             <div class="flex flex-row flex-between flex-middle full-height">
-              <i class="material-icons">person</i>
+              <i class="material-icons">account_circle</i>
               <div id="turnkey-button-text">{{currentUser.profile.name}}</div>
               <i class="material-icons">keyboard_arrow_down</i>
             </div>
