Re-enabled login errors, closes #43.

--- a/client/main.less
+++ b/client/main.less
@@ -130,6 +130,12 @@ nav .brand-logo {
 }
 .at-error.card-panel {
   color: #fff;
+  padding: 20px;
+  margin-bottom: 10px;
+}
+.at-btn.submit {
+  height: auto;
+  padding: 10px;
 }
 
 /*  Inputs */
