--- a/client/templates/side-nav/external-side-nav/external-side-nav.html
+++ b/client/templates/side-nav/external-side-nav/external-side-nav.html
@@ -2,7 +2,9 @@
   <div class="navbar-fixed">
     <nav class="teal">
       <div class="nav-wrapper">
-        <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+        <a href="#" data-activates="slide-out" class="button-collapse">
+          <i class="mdi-navigation-menu"></i>
+        </a>
         <a href="#" class="brand-logo">{{routeContext}}</a>
         <div id="turnkey-button" class="full-height valign-wrapper hide-on-small-only">
           <a data-sign-in class="waves-effect waves-light btn teal darken-2 white-text z-depth-2">Sign In</a>
