--- a/client/templates/side-nav/internal-side-nav/internal-side-nav.html
+++ b/client/templates/side-nav/internal-side-nav/internal-side-nav.html
@@ -7,9 +7,9 @@
         <div id="turnkey-button" class="full-height valign-wrapper hide-on-small-only">
           <a data-activates='turnkey-dropdown' class="dropdown-button btn teal darken-2 white-text z-depth-2">
             <div class="flex flex-row flex-between flex-middle full-height">
-              <i class="material-icons">account_circle</i>
+              <i class="material-icons left">account_circle</i>
               <div id="turnkey-button-text">{{currentUser.profile.name}}</div>
-              <i class="material-icons">keyboard_arrow_down</i>
+              <i class="material-icons right">keyboard_arrow_down</i>
             </div>
           </a>
           <ul id='turnkey-dropdown' class='dropdown-content'>
