--- a/client/templates/side-nav/side-nav.less
+++ b/client/templates/side-nav/side-nav.less
@@ -21,15 +21,13 @@
   position: absolute;
   right: 0;
 }
-#turnkey-button > a {
-  padding-left: 10px;
-  padding-right: 10px;
+#turnkey > a {
+  padding: 0 10px;
 }
 #turnkey-button > a i {
   height: 100%;
   line-height: inherit;
 }
 #turnkey-button-text {
-  margin: 0 10px 0 10px;
   text-transform: none;
 }
