--- a/client/main.less
+++ b/client/main.less
@@ -129,9 +129,7 @@ nav .brand-logo {
   right: 10px;
 }
 .at-error.card-panel {
-  color: #fff;
-  padding: 20px;
-  margin-bottom: 10px;
+  display: none;
 }
 .at-btn.submit {
   height: auto;
